[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.5",
    "noisereduce>=3.0.3",
    "pydub>=0.25.1",
    "python-speech-features>=0.6",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "streamlit>=1.49.0",
    "webrtcvad>=2.0.10",
]
